@@ -922,6 +922,9 @@ class NXSCreateStdCompFSTest(unittest.TestCase):
                      '    </group>\n'
                      '    <field name="program_name" '
                      'scan_command="$var.scan_title" scan_id="$var.scan_id" '
+                     'measurement_group="$var.measurement_group" '
+                     'measurement_group_channels="$var.mgchannels" '
+                     'nexus_components="$var.nexus_components" '
                      'type="NX_CHAR">NexDaTaS<attribute name="version" '
                      'type="NX_CHAR">\n'
                      '        <strategy mode="INIT" />'
@@ -1092,6 +1095,9 @@ class NXSCreateStdCompFSTest(unittest.TestCase):
                      '    </group>\n'
                      '    <field name="program_name" '
                      'scan_command="$var.scan_title" scan_id="$var.scan_id" '
+                     'measurement_group="$var.measurement_group" '
+                     'measurement_group_channels="$var.mgchannels" '
+                     'nexus_components="$var.nexus_components" '
                      'type="NX_CHAR">NexDaTaS<attribute name="version" '
                      'type="NX_CHAR">\n'
                      '        <strategy mode="INIT" />'
